<resources>
    <string name="app_name">BPM</string>
    <string name="playlistLabel">Playlists</string>
    <string name="songLabel">Songs</string>
    <string name="tempSongValue">0:00</string>
    <string name="artistTemp">Artist Name</string>
    <string name="songTemp">Song Title Temp</string>
    <string name="spinner_title">Playlist</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="age">Select Birthday</string>
    <string name="Welcome">Welcome to BPM Beats</string>
    <string name="WelcomeSub">Tell us a little about yourself</string>
    <string name="tempo">BPM: 00.00</string>
    <string name="SearchDevice">Search For Device</string>
    <string name="DialogHeaderBluetooth">Please select your bluetooth device</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD7ck5vHVTkbTvFHjdByNuRVOyRRLc8vAE</string>
    <string name="start_workout">Start Workout</string>
    <string name="stop_workout">Finish Workout</string>
    <string name="Gallery">GALLERY</string>
    <string name="Photo">PHOTO</string>
    <string name="String_open_Camera">Open Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
