<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".OnBoardingActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragmentViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomPlayer"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:background="@drawable/midnight_city_gradient">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="188dp">

            <ImageView
                android:id="@+id/shuffleButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:scaleType="fitCenter"
                android:clickable="true"
                android:focusable="true"
                android:background="@null"
                android:layout_marginBottom="45dp"
                android:src="@drawable/shuffle_green"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="14dp">


                <ImageButton
                    android:id="@+id/previousBTN"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/ic_media_previous" />

                <ImageButton
                    android:id="@+id/playPauseBTN"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/ic_media_pause" />

                <ImageButton
                    android:id="@+id/skipBTN"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/ic_media_next" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-1dp"
                android:layout_marginRight="-1dp"
                android:layout_marginBottom="97dp"
                android:maxWidth="5dp"
                android:maxHeight="5dp"
                android:minWidth="5dp"
                android:minHeight="5dp"
                android:progress="1"
                android:progressDrawable="@drawable/custom_seekbar"
                android:thumbTint="@color/white" />

            <TextView
                android:id="@+id/songTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="21dp"
                android:layout_marginBottom="135dp"
                android:fontFamily="@font/linetocircularblack"
                android:text="@string/songTemp"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="21dp"
                android:layout_marginBottom="119dp"
                android:fontFamily="@font/linetocircularpromedium"
                android:text="@string/artistTemp"
                android:textColor="@color/colorGrey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/songTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="119dp"
                android:fontFamily="@font/linetocircularpromedium"
                android:text="@string/tempo"
                android:textColor="@color/colorGrey"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/songProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="86dp"
                android:fontFamily="@font/linetocircularpromedium"
                android:text="@string/tempSongValue"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/songTimeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="85dp"
                android:fontFamily="@font/linetocircularpromedium"
                android:text="@string/tempSongValue"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

        </RelativeLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</RelativeLayout>